--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
+    implementation libs.browser
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
@@ -49,4 +50,6 @@ dependencies {
     implementation 'com.airbnb.android:lottie:6.0.0'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 }
