--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
+            android:name=".Activities.TranslationPage"
+            android:exported="false" />
+        <activity
             android:name=".Activities.ChildOrNewVoter"
             android:exported="false" />
         <activity
