--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,5 +56,6 @@ dependencies {
     implementation 'com.github.blikoon:QRCodeScanner:0.1.2'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'com.google.android.gms:play-services-maps:18.2.0'
+    implementation "androidx.biometric:biometric:1.1.0"
 
 }
