--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
+            android:name=".Activities.CounterActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activities.AddNotesActivity"
             android:exported="false" />
         <activity
